--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -142,7 +142,7 @@
   border:1px solid #eaeaea;
   padding:0.5rem;
   border-radius:1rem;
-  margin:0.5rem;
+  margin-top:0.5rem;
 }
 
 #main_body .routine_total p:first-child span:first-child {
