--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -166,11 +166,13 @@
   align-items: center;          
   justify-content: center;
   font-weight: bold;
-  box-sizing: border-box;  
-  border-radius:1rem;
+  box-sizing: border-box;
   text-decoration:none;
-  padding:0.5rem;
-  border:1px solid #333;
+  color:#333;
+  gap:0.5rem;
+}
+#main_body .routine_total p span a.on {
+  border:1px solid red!important
 }
 
 #main_body .routine_card .rc_inner i {
