--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -176,6 +176,14 @@
   color:#333!important;
 }
 
+#main_body .routine_total p span a strong {
+  border:1px solid red
+}
+
+#main_body .routine_total p span a em {
+  border:1px solid green
+}
+
 #main_body .routine_card .rc_inner i {
   display:inline-block;
   font-size:0.7rem;
