--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -171,7 +171,7 @@
 }
 
 #main_body .routine_total p span a.on {
-  border:1px solid red!important
+  border:1px solid red!important;
   background-color:none!important;
   color:#333!important;
 }
