--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -140,7 +140,7 @@
   position:relative; 
   z-index:2;
   border:1px solid #eaeaea;
-  padding:0.5rem;
+  padding:0.5rem 1rem 0.5rem 1rem;
   border-radius:1.5rem;
   margin-top:0.5rem;
 }
@@ -168,6 +168,7 @@
   box-sizing: border-box;
   text-decoration:none;
   color:#333;
+  line-height:1.1rem;
 }
 
 #main_body .routine_total p span a.on {
@@ -181,7 +182,12 @@
 }
 
 #main_body .routine_total p span a em {
-  border:1px solid green
+  border:1px solid green;
+  margin-right:0.5rem;
+}
+
+#main_body .routine_total p span a em:last-child {
+  margin-right:0
 }
 
 #main_body .routine_card .rc_inner i {
