--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -173,13 +173,12 @@
 }
 
 #main_body .routine_total p span a.on {
-  border:1px solid red!important;
   background-color:none!important;
   color:#333!important;
 }
 
 #main_body .routine_total p span a strong {
-  border:1px solid red
+  margin-right:0.2rem;
 }
 
 #main_body .routine_card .rc_inner i {
