--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -129,6 +129,7 @@
 #main_body .routine_total {
   margin:0;
   position:relative;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
 
 #main_body .routine_total p:first-child {
