--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -129,7 +129,6 @@
 #main_body .routine_total {
   margin:0;
   position:relative;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
 }
 
 #main_body .routine_total p:first-child {
@@ -144,6 +143,7 @@
   padding:0.5rem 1rem 0.5rem 1rem;
   border-radius:1.5rem;
   margin-top:0.5rem;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
 }
 
 #main_body .routine_total p:first-child span:first-child {
