--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -49,7 +49,7 @@
   justify-content:center;
   align-items:center;
   gap:0.8rem;
-  padding-bottom:0.5rem;
+  padding:0.5rem 0 0.5rem 0;
 }
 
 #main_body .date_scroll .ruffys_item span[class^="ruffy"] {
