--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -50,6 +50,7 @@
   align-items:center;
   gap:0.8rem;
   padding:0rem 0 0.5rem 0;
+  border-top:1px solid #333
 }
 
 #main_body .date_scroll .ruffys_item span[class^="ruffy"] {
