--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -50,7 +50,7 @@
   align-items:center;
   gap:0.8rem;
   padding:0rem 0 1rem 0;
-  border-bottom:1px solid #eaeaea
+  border-bottom:1px solid #333
 }
 
 #main_body .date_scroll .ruffys_item span[class^="ruffy"] {
