--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -122,9 +122,9 @@
 
 #main_body .date_fixed_today span.on_w_nt {
   border-radius:1rem;
-  background-color:#ff6c6c!important;
+  /*background-color:#ff6c6c!important;
   border:1px solid #ff6c6c!important;
-  color:#fff!important;
+  color:#fff!important;*/
 }
 
 
