--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -109,23 +109,25 @@
   font-size:0.6rem;
 }
 
-#main_body .date_scroll .date_group span.on,
-#main_body .date_fixed_today span.on {
+#main_body .date_scroll .date_group span.on {
   font-weight:bold!important;
   color:#333!important;
   background-color:#fff!important;
  }
 
-#main_body .date_fixed_today span.on {
-  border:none!important;
+#main_body .date_fixed_today span.on,
+#main_body .date_fixed_today span.on.on {
+  color:#fff!important;
+  border-radius:1rem;
+  border:1px solid red!important;
 }
 
-#main_body .date_fixed_today span.on_w_nt {
+/*#main_body .date_fixed_today span.on_w_nt {
   border-radius:1rem;
-  /*background-color:#ff6c6c!important;
+  background-color:#ff6c6c!important;
   border:1px solid #ff6c6c!important;
-  color:#fff!important;*/
-}
+  color:#fff!important;
+}*/
 
 
 #main_body .routine_total {
