--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -124,14 +124,8 @@
 #main_body .date_fixed_today span.on.on {
   color:#fff!important;
   font-weight:bold!important;
+  border:none!important
 }
-
-/*#main_body .date_fixed_today span.on_w_nt {
-  border-radius:1rem;
-  background-color:#ff6c6c!important;
-  border:1px solid #ff6c6c!important;
-  color:#fff!important;
-}*/
 
 
 #main_body .routine_total {
