--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -153,6 +153,10 @@
   color:#333;
 }
 
+#main_body .routine_total p:first-child span:first-child strogn {
+  margin-right:0.5rem
+}
+
 #main_body .routine_total p:first-child span em {
   font-weight:bold!important
 }
