--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -153,7 +153,7 @@
   color:#333;
 }
 
-#main_body .routine_total p:first-child span:first-child strogn {
+#main_body .routine_total p:first-child span:first-child strong {
   margin-right:0.5rem
 }
 
