--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -234,6 +234,9 @@
 }
 
 #main_body .tools a {
+  width:2rem;
+  height:2rem;
+  margin-left:0.2rem;
   border:1px solid #eee;
   border-radius:0.5rem;
 }
