--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -265,28 +265,10 @@
   background: url('../images/ico_list.png') no-repeat 50% 50%/50%;
 }
 
-#main_body .tools a.r_move.on {
-  background: url('../images/ico_move_w.png') no-repeat 50% 50%/50%;
-}
-
-#main_body .tools a.r_del.on {
-  background: url('../images/ico_del_w.png') no-repeat 50% 50%/50%;
-}
-
-#main_body .tools a.r_select.on {
-  background: url('../images/ico_check_w.png') no-repeat 50% 50%/70%;
-}
-
-#main_body .tools a.r_block.on {
-  background: url('../images/ico_block_w.png') no-repeat 50% 50%/50%;
-}
-
-#main_body .tools a.r_card.on {
-  background: url('../images/ico_card_w.png') no-repeat 50% 50%/50%;
-}
-
-#main_body .tools a.r_list.on {
-  background: url('../images/ico_list_w.png') no-repeat 50% 50%/50%;
+#main_body .tools [class$='on'] {
+  border: 1px solid #333 !important;
+  background-color: #fff !important;
+  color: #333 !important;
 }
 
 
