--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -49,15 +49,14 @@
   justify-content:center;
   align-items:center;
   gap:0.8rem;
-  padding:0rem 0 0.5rem 0;
+  padding:1rem;
+  border-radius:1.5rem;
+  background-color:#ffdc71
 }
 
 #main_body .date_scroll .ruffys_item span[class^="ruffy"] {
-  display:inline-block;
-  width:2rem;
-  height:2rem;
-  background-size:100% 100%;
-  background-repeat:no-repeat;
+  width:2.5rem;
+  height:2.5rem;
 }
 
 #main_body .date_scroll .date_fixed_today {
