--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -81,7 +81,6 @@
   display:flex;
   justify-content:flex-start;
   align-items:center;
-  gap:0.5rem;
   overflow-x:auto;                
   -webkit-overflow-scrolling:touch;
   white-space:nowrap;
@@ -149,7 +148,7 @@
   align-items: center;
   position:relative; 
   z-index:2;
-  padding:1rem;
+  padding:0rem 1rem 1rem 1rem;
   border:1px solid #e6e6e6;
   border-top:none;
   border-bottom-right-radius: 1.5rem;
