--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -74,12 +74,14 @@
   border-right:none;
   border-bottom:none;
   border-top-left-radius: 1.5rem;
+  margin:0;
 }
 
 #main_body .date_scroll .date_group {
   grid-area: group;
   display:flex;
   justify-content:flex-start;
+  gap:0.5rem;
   align-items:center;
   overflow-x:auto;                
   -webkit-overflow-scrolling:touch;
