--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -69,12 +69,11 @@
   z-index: 10;
   flex-shrink:0;
   font-weight:bold;
-  padding:1rem;
+  padding:1rem 1rem 0.5rem 1rem;
   border:1px solid #e6e6e6;
   border-right:none;
   border-bottom:none;
   border-top-left-radius: 1.5rem;
-  margin:0;
 }
 
 #main_body .date_scroll .date_group {
@@ -88,7 +87,7 @@
   white-space:nowrap;
   -ms-overflow-style:none;
   scrollbar-width:none;
-  padding:1rem;
+  padding:1rem 1rem 0.5rem 1rem;
   border:1px solid #e6e6e6;
   border-left:none;
   border-bottom:none;
