--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -50,7 +50,7 @@
   align-items:center;
   gap:0.8rem;
   padding:1rem;
-  margin:0rem 0 0.5rem 0;
+  margin:1rem;
   border-radius:1.5rem;
   background-color:#fafafa;
   border:1px solid #e6e6e6;
