--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -33,6 +33,7 @@
   border-radius:1.5rem;
   background-color:#fafafa;
   border:1px solid #e6e6e6;
+  box-shadow: inset 0 1px 4px rgba(0,0,0,0.08);
 }
 
 #main_body .ruffys_item span[class^="ruffy"] {
