--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -31,7 +31,7 @@
   padding:1rem;
   margin:0 0 1rem 0;
   border-radius:1.5rem;
-  background-color:#ff4ba;
+  background-color:#ffec85;
   border:1px solid #e6e6e6;
 }
 
