--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -31,8 +31,8 @@
   padding:1rem;
   margin:0 0 1rem 0;
   border-radius:1.5rem;
-  background-color:#ffec85;
-  border:1px solid #e6e6e6;
+  background-color:#fff1a1;
+  border:1px solid #ffec85;;
 }
 
 #main_body .ruffys_item span[class^="ruffy"] {
