--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -31,7 +31,7 @@
   padding:1rem;
   margin:0 0 1rem 0;
   border-radius:1.5rem;
-  background-color:#f1f1f1;
+  background-color:#fafafa;
   border:1px solid #e6e6e6;;
 }
 
