--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -244,12 +244,19 @@
   margin-left: auto;
 }
 
-#main_body .tools a {
+#main_body .tools a,
+#main_body .today_tools .on_w.light {
   width:1.8rem;
   height:1.8rem;
   margin-left:0.2rem;
   border:1px solid #eee;
   border-radius:0.5rem;
+}
+
+#main_body .today_tools .on_w.light {
+  text-decoration:none;
+  font-weight:bold;
+  line-height:1.8rem;
 }
 
 #main_body .tools a.r_move {
