--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -328,9 +328,9 @@
   background-color:#f5f5f5
 }
 
-#main_body .routine_card.rt_off .rc_inner {
-  opacity: 0.3;
-  position: relative;
+#main_body .routine_card.rt_off .rc_inner .done_set,
+#main_body .routine_card.rt_off .rc_inner .walk_check{
+  width:50%;
 }
 
 
@@ -341,6 +341,8 @@
   gap:0.5rem;
   flex-wrap: wrap;
 }
+
+#main_body .routine_card .rc_inner .state_button.twice 
 
 #main_body .routine_card .rc_inner i {
   font-style:normal;
