--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -1,3 +1,9 @@
+#main_body {
+  font-size:0;
+}
+#main_body * {
+  font-size: initial;
+}
 #main_body .no_data { 
   position: fixed;
   top: 50%; 
@@ -302,7 +308,8 @@
 
 #main_body .routine_card.vblock .state_button,
 #main_body .routine_card.vlist .state_button {
-  display:none
+  display:none!important;
+  border:1px solid red!important;
 }
 #main_body .routine_card.vblock {
   display: inline-block;
