--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -1,9 +1,3 @@
-#main_body {
-  font-size:0;
-}
-#main_body * {
-  font-size: initial;
-}
 #main_body .no_data { 
   position: fixed;
   top: 50%; 
@@ -316,6 +310,7 @@
   vertical-align: top;
   width: calc(50% - 0.5rem);
   margin-right: 1rem;
+  margin-bottom: 1rem;
   box-sizing: border-box;
   border:1px solid red;
 }
