--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -305,22 +305,23 @@
   display:none!important;
   border:1px solid red!important;
 }
-#main_body .done_group:has(.routine_card.vblock) {
-  display: inline-block;
-  vertical-align: top;
-  width: calc(50% - 1rem);
-  margin-right: 1rem;
+
+/* vblock이 있을 때만 2열 그리드 + 같은 줄 동일 높이 */
+#main_body .main_scroll:has(.routine_card.vblock) {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 1rem;
+  align-items: stretch;
 }
 
-#main_body .done_group:has(.routine_card.vblock):nth-of-type(2n) {
-  margin-right: 0;
-}
-
-#main_body .done_group:has(.routine_card.vblock) .routine_card.vblock {
-  width: 100%;
-  margin-bottom: 1rem;
+/* vblock에 주었던 inline-block/폭/마진 규칙 제거(무력화) */
+#main_body .routine_card.vblock {
   display: block;
+  width: auto;
+  margin: 0;
+  box-sizing: border-box;
 }
+
 #main_body .routine_card.vlist {
   border:1px solid green!important
 }
