--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -254,8 +254,9 @@
 }
 
 #main_body .today_tools .on_w.light {
-  width:auto;
-  padding:0 0.5re 0 0.5rem;
+  height:1.8rem;
+  min-width:1.8rem;
+  padding:0 0.5rem 0 0.5rem;
   text-decoration:none;
   font-weight:bold;
   line-height:1.8rem;
