--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -261,7 +261,10 @@
 }
 
 #main_body .today_tools .basic {
- width:3rem;
+  height:1.8rem;
+  line-height:1.8rem;
+  border-radius:0.5rem;
+  padding:0 0.5rem 0 0.5rem;
 }
 #main_body .tools a.r_move {
   background: url('../images/ico_move.png') no-repeat 50% 50%/50%;
