--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -253,8 +253,7 @@
   border-radius:0.5rem;
 }
 
-#main_body .today_tools .on_w.light,
-#main_body .today_tools .basic {
+#main_body .today_tools .on_w.light{
   text-decoration:none;
   font-weight:bold;
   line-height:1.8rem;
@@ -263,7 +262,12 @@
 
 #main_body .today_tools .basic {
   width:4rem;
+  height:1.8rem;
   padding:0 0.5rem 0 0.5rem;
+  text-decoration:none;
+  font-weight:bold;
+  line-height:1.8rem;
+  text-align:center;
 }
 #main_body .tools a.r_move {
   background: url('../images/ico_move.png') no-repeat 50% 50%/50%;
