--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -261,13 +261,14 @@
 }
 
 #main_body .today_tools .basic {
-  width:4rem;
+  width:auto!important;
   height:1.8rem;
   padding:0 0.5rem 0 0.5rem;
   text-decoration:none;
   font-weight:bold;
   line-height:1.8rem;
   text-align:center;
+  border-radius:0.5rem;
 }
 #main_body .tools a.r_move {
   background: url('../images/ico_move.png') no-repeat 50% 50%/50%;
